--- a/chapter5.tex
+++ b/chapter5.tex
@@ -130,7 +130,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %\item 
 %едеєе┐ещепе╞еге╓└ндмд╩ддбд
 └╤д▀╜┼д═└▐дь└■е░еще╒дм╔┴▓шд╡дьд┐╕хд╦бде░еще╒║╕▓╝д╬еще╕еке▄е┐еєеиеъевд╟бдепещедевеєе╚д╬╚п╕└д╬│╞1╩╕дкдшд╙ележеєе╗ещб╝д╬│╞╝┴╠фд╦дкддд╞╩м╬рдЄ╩╤дидыд╚бд┬и╗■д╦е░еще╒╔┴▓шд╦╩╤╣╣┼м═╤д╡дьдыдшджд╦д╖д┐бе
-╦▄еще╕еке▄е┐еєеиеъевдмд▀д┐д╖д┐═╫╖яд╦д─ддд╞д╧бд╔╒╧┐д╦д╞╡н╜╥д╣дыбе
+%╦▄еще╕еке▄е┐еєеиеъевдмд▀д┐д╖д┐═╫╖яд╦д─ддд╞д╧бд╔╒╧┐д╦д╞╡н╜╥д╣дыбе
 
 %\item 
 %еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╜ъ═╫╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бед╜дьдЄ╝їд▒бд║г▓єд╧е╫еэе░ещер╛хд╬╠╡┬╠д╩╡н╜╥дЄ╛╩дпд│д╚д╟╠є5╔├д╦├╗╜╠д╖д┐бе
