--- a/chapter2.tex
+++ b/chapter2.tex
@@ -5,13 +5,13 @@
 KH Coder\cite{kh1}とは，テキスト文章型のデータを統計分析するためのフリーのソフトウェアである．アンケートの自由記述・インタビュー記録・新聞記事など，さまざまな社会調査データを分析するため，立命館大学の樋口が開発したものである．計量テキスト分析またはテキストマイニングの方法に対応している．杉浦ら\cite{kango}は成人看護学概論の成長報告書にKH Coderの単語共起ネットワーク図機能を適用することで，成人看護学概論にプロジェクト学習を採用した効果を明らかにした．
 
 
-%以下に，KH Coderの主な可視化ツールについて紹介する．
+%以下に，KH Coderの主な可視化システムについて紹介する．
 
 
 %\subsection{単語共起ネットワーク図}
 
 %KH Coderは，統計計算とグラフィックスのための環境「R」を内部で解析に利用している．KH Coderで形態素解析後のデータの共起ネットワーク可視化を行うにあたり，どこからどこまでの範囲内で共起すれば共起判定を行うかという集計単位をKH Coder上で設定可能である．
-KH Coderは改行によって段落を認識し，句点によって文を認識する．よってひと段落ないし一文を集計単位として設定することが可能になっている\cite{manu}．
+KH Coderは改行によって段落を認識し，句点によって文を認識する．よってひと段落または一文を集計単位として設定することが可能になっている\cite{manu}．
 
 KH Coderのデメリットとして，
 \begin{itemize}
@@ -28,7 +28,7 @@ KH Coderのデメリットとして，
 
 %\subsection{自己組織化マップ}
 
-%自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき，その単語のグループ分布を集計した．また，自己組織化マップに描画された単語から手動でマイナスイメージないしプラスイメージの単語を選んでそれぞれグループをつくり，その単語のグループ分布を集計した．
+%自己組織化マップ機能によるカウンセリングテキストデータの単語クラスタリングに基づき，その単語のグループ分布を集計した．また，自己組織化マップに描画された単語から手動でマイナスイメージまたはプラスイメージの単語を選んでそれぞれグループをつくり，その単語のグループ分布を集計した．
 
 %自己組織化マップ単体の問題点としては，クラスターごとの描画色を自分で選べないこと，作成に1分半〜3分時間がかかることが挙げられる．
 
@@ -36,11 +36,11 @@ KH Coderのデメリットとして，
 \section{時系列に沿った話題の可視化}
 
 
-%%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析ツールの開発は行われていない．
+%%% しかし，これらの文献では渦と熱輸送との関係を可視化した後，対話的かつ連続的に次の分析を行うことのできるビジュアル分析システムの開発は行われていない．
 
-%%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をツール要件として設定し，ツール開発を行った．
+%%% そこで本研究では先に述べた「物理量の関係が見られる」，「アニメーション表示可能」「自由な視点移動が可能」をシステム要件として設定し，システム開発を行った．
 
-原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングツールにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
+原田ら\cite{voistrap}は，マイクの音圧から話者の喋り始めから喋り終わりまでを可視化し，話者ごとの発話量を棒グラフで，発話の重なりを折れ線グラフで可視化した．しかし本研究では，カウンセリングにおいてカウンセラーからどのようなクライエントの話題を引き出せたかという，カウンセラーとクライエントとの発言の対応が重要になるので，にはクライエントの発言情報とカウンセラーの発言情報の両方をコンパクトに1つのグラフにまとめる方が良いと考える．またカウンセリングを書き起こしたテキストデータにおいては，その発言に何秒かかったかや，どこで発話の重なりがあるかが分からない．庄ら\cite{shou}は，Webカウンセリングシステムにおいて，折れ線グラフを用いてクライエントの話題を可視化した．しかし，ビギナーカウンセラーの指導という観点ではビギナーカウンセラーからの発言内容とクライエントの発言内容を組み合わせて可視化しなければならない．
 
 
 Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．本研究においても，カウンセラーおよびクライエントのそれぞれの発言に関して上下の非対称折れ線グラフで描画するという可視化手法は考えうる．しかし今回は，カウンセラーの質問とそれに対するクライエントの回答は交互に出現し，質問からどのような回答が引き出されるかに着目したい．したがって上下非対称にそれぞれカウンセラーとクライエントの発言についてグラフを並べるのは不適当だと考えた．
@@ -66,8 +66,8 @@ Ericら\cite{taskdriven}は，2種類の手法によって分けたトピックの時間分布を上下の非
 
 
 
-伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本研究において，クライエントの発言に関する情報は時系列・文のグループ・文の数の3次元データ，カウンセラーの発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分可視化できると考えた．
+伊藤ら\cite{itoh2010interactive}は，ブログユーザーが興味のある話題の時系列推移を3次元で可視化するシステムを開発した．本論文において，4.1節や45.2節で後述する通りクライエントの発言に関する情報は時系列・文のグループ・文の数の3次元データ，カウンセラーの発言に関する情報は時系列・質問の種類の2次元データであるが，色分けを用いれば2次元のグラフで十分可視化できると考えた．
 
 
 
-本提案ツールとして，カウンセラーからの質問形態と，「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化した．なお，「愛」「仕事」「交友」という単語のグループの分け方は，本提案ツールの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来するものである．それについては次章で詳しく述べる．単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにツールを構成したかについて述べる．
+本提案システムとして，カウンセラーからの質問形態と，「愛」「仕事」「交友」の文のグループの時間経過に沿った分布変化を可視化した．なお，「愛」「仕事」「交友」という単語のグループの分け方は，本提案システムの入力データとして取り扱ったヨーガセラピーが基本としているアドラー心理学に由来するものである．それについては次章で詳しく述べる．単語のグループの可視化にあたっては，カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探して仮の分類結果としてグラフを提示する．その上で，ラジオボタンによって「愛」「仕事」「交友」の分類を変更することが出来るようにした．第4章ではどのようにシステムを構成したかについて述べる．
