--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,11 +1,11 @@
-┴░╛╧д╟д╧─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е─б╝еы═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е─б╝еыд╬│л╚пдЄ╣╘д├д┐бед│д╬е─б╝еыд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е─б╝еыд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
+┴░╛╧д╟д╧─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│л╚пдЄ╣╘д├д┐бед│д╬е╖е╣е╞ерд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
 
  \begin{figure}
 %\begin{landscape}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{ver160203.png}
    \end{center}
-   \caption{─є░╞е─б╝еыд╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{─є░╞е╖е╣е╞ерд╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
    \label{fig:ver160203}
 %\end{landscape}
  \end{figure}
@@ -17,9 +17,9 @@
 \section{╞■╬╧е╟б╝е┐д╬┴░╜ш═¤}
 
 
-д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе┴░╛╧д╬е╫еэе╚е┐еде╫д╚╦▄╛╧д╬─є░╞е─б╝еыд╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞бд▓╝╡нд╦╜╥д┘ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
+д▐д║╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды╞■╬╧е╟б╝е┐д╦д─ддд╞╜╥д┘дыбе┴░╛╧д╬е╫еэе╚е┐еде╫д╚╦▄╛╧д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╞■╬╧е╟б╝е┐д╧╢ж─╠д╖д╞бд▓╝╡нд╦╜╥д┘ды┴┤16╕─д╬е╟б╝е┐дЄ╗╚═╤д╖д┐бе
 ╦▄╧└╩╕д╬╝┬╕│д╟═╤ддды┬╨╛▌е╟б╝е┐д╦д╧б╓┐┤╬┼╞т▓╩д╦дкд▒ды└▌┐й╛у│▓└ь╠чешб╝ем╬┼╦бе░еыб╝е╫б╫д╬б╓ешб╝ем╬┼╦б╗Ў╬у╕б╞д▓ёб╫╗ё╬┴дЄ╗╚═╤д╖д┐бе═╤ддд┐╗ё╬┴д╬╗Ў╬у╕б╞д▓ёд╬╞№╔╒д╧2014╟п11╖ю11╞№бд2015╟п1╖ю24╞№бд╞▒╟п3╖ю28╞№бд╞▒╟п10╖ю17╞№бд╞▒╟п11╖ю28╞№д╬дтд╬дЄ╗╚═╤д╖д┐бе
-╕х╜╥д╣ды─є░╞е─б╝еыд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№дкдшд╙╞▒╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
+╕х╜╥д╣ды─є░╞е╖е╣е╞ерд╦╞╔д▀╣■д▐д╗дыд┐дсд╬┴░╜ш═¤д╚д╖д╞бдд▐д║бд│╞ележеєе╗еъеєе░▓єд┤д╚д╦е╞ене╣е╚е╟б╝е┐дЄ╩мд▒д┐бе╛░бд2015╟п10╖ю17╞№дкдшд╙╞▒╟п11╖ю28╞№╗Ў╬у╕б╞д▓ё═╤╗ё╬┴д╦д─ддд╞д╧бдележеєе╗еъеєе░д╖д┐╟пдмб╓X╟пб╫д╚д╖д╞╔·д╗дщдьд╞ддд┐д┐дсбд╦▄╧└╩╕╞тд╟дт░╩╣▀бдд│дьдщ2┼└д╬╗ё╬┴╞тд╦дкд▒дыележеєе╗еъеєе░д╬╟пдЄX╟пд╚╔╜╡нд╣дыбе
 
 
 \begin{itemize}
@@ -53,25 +53,25 @@
 \end{itemize}
 д╬╖╫15╕─д╬е╞ене╣е╚е╟б╝е┐дЄ═╤░╒д╖д┐бе
 
-д╡дщд╦д│д╬─є░╞е─б╝еыд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
+д╡дщд╦д│д╬─є░╞е╖е╣е╞ерд╦дкддд╞бд╕х╜╥д╣ды╜щ┤№е░еще╒╔┴▓шдмдвды─°┼┘═н═╤д╩дтд╬длдЄ╝ид╣д┐дсд╦╠╧╡╝е╟б╝е┐дЄ1╕─═╤░╒д╖д┐бе
 ░╩╛хбд16╕─д╬ележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄд╜дьд╛дьjsonе╒ебедеыд╦╩╤┤╣д╖д┐бе%[\{"a":"(╦▄╩╕)"\}]д╬╖┴╝░д╟║ю└од╖д┐бе
 
 \section{евеые┤еъе║ер}
 
 
-╝бд╦бд┴░е╗епе╖ечеєд╟╜╥д┘д┐╞■╬╧е╟б╝е┐дЄ═╤ддд┐бд╦▄─є░╞е─б╝еыд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
-д╩дкбд╦▄─є░╞е─б╝еыд╬│л╚п╕└╕ьд╧JavaScriptд╟двдыбе
+╝бд╦бд┴░е╗епе╖ечеєд╟╜╥д┘д┐╞■╬╧е╟б╝е┐дЄ═╤ддд┐бд╦▄─є░╞е╖е╣е╞ерд╬евеые┤еъе║ерд╦д─ддд╞└т╠└д╣дыбе
+д╩дкбд╦▄─є░╞е╖е╣е╞ерд╬│л╚п╕└╕ьд╧JavaScriptд╟двдыбе
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
 ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед│д╬▓─╗ы▓╜д╬║▌д╦бде╟б╝е┐д╬▓─╗ы▓╜дфе╟б╝е┐д╦┤Ёд┼ддд╞е╔енехесеєе╚дЄ┴р║юд╣дыд┐дсд╦╗╚═╤д╡дьд╞дддыJavaScriptещеде╓ещеъд╟двдыD3.js\cite{bostock2012d3}дЄ╗╚═╤д╖д┐бе
 
-╦▄е─б╝еыд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
+╦▄е╖е╣е╞ерд╟д╧бдепещедеиеєе╚д▐д┐д╧ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
-jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д╩ддд╖епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
+jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ╟з╝▒бд┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦бд┴┤│╤╔╜╝ид╬╢ч┼└б╩беб╦д▐д┐д╧епеие╣е┴ечеєе▐б╝епб╩бй,?б╦д╟╩╕д╬╜кдядъдЄ╟з╝▒д╣дыдшдж└▀─ъд╡дьд╞дддыбед╜д╬д┐дсбд╧├╝╘дм╕Є┬хд╣дыд┐д╙д╦┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╢ш└┌дь╠▄дЄ╝ид╡д╩ддд╚ддд▒д╩ддбе
 
-\subsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
+\subsubsection{└╤д▀╜┼д═└▐дь└■е░еще╒}
 ┐▐\ref{fig:ver160203}д╦дкддд╞бдд▐д║└╤д▀╜┼д═└▐дь└■е░еще╒д╧епещедеиеєе╚д╬1▓є1▓єд╬╚п╕└д╬├цд╟д╬бдеве╔ещб╝┐┤═¤│╪д╬│╞еле╞е┤еъд╬╩м╔█дЄ▓─╗ы▓╜д╖д╞дддыбед┐д└д╖1▓є1▓єд╬╚п╕└д╧бд╧├╝╘д╬╕Є┬хдЄ╚п╕└д╬╢ш└┌дь╠▄д╚д╣дыбед│д╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞└─┐зд╧б╓╗┼╗Ў┤╪╖╕б╫бде╘еєеп┐зд╧б╓░жб╩╬°░жбж░ж┤╪╖╕б╦б╫бд╬╨┐зд╧б╓╕Є═зб╩═з┐═┤╪╖╕б╦б╫д╦╠й└▄д╦┤╪╖╕д╣ды├▒╕ьдЄ┤▐др╩╕д╬╩м╔█дЄ╔╜д╖д╞дддыбе
-▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╬▀╖╫д╬╩╕╗·┐ЇдЄ▓г╝┤бдд╣д╩дяд┴╗■┤╓╝┤д╚д╖д┐бе╕х╜╥д╣дыележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└д╧д│д╬╗■┤╓╝┤д╦д╜д├д╞╜╨╕╜д╣дыбеележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╬╞■дь┬╪дядъдмдядлдъдфд╣дддшджд╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дмепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄд┴дчджд╔╔╜д╖д╞дддыд╬д╧╩╪╡╣╛х╚п╕└╔Ї╩мд╬├ц▒√╔Ї╩мд╦д╩д├д╞дддыбе
+▓г╝┤д╧╗■┤╓╝┤дЄ╔╜╕╜д╖д╞дддыбед┐д└д╖┬╨╛▌е╟б╝е┐д╟двды╜ёдн╡пд│д╖е╞ене╣е╚е╟б╝е┐длдщд╧╝┬║▌д╬╖╨▓с╔├┐Їд╧╞╔д▀╝шдьд╩ддд╬д╟бд╞╔д▀╣■д▐д╗д┐е╟б╝е┐╞тд╦дкд▒дыепещедеиеєе╚д╬╚п╕└╬╠д╬╬▀╖╫д╬╩╕╗·┐ЇдЄ▓г╝┤бдд─д▐дъ╗■┤╓╝┤д╚д╖д┐бе╕х╜╥д╣дыележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└д╧д│д╬╗■┤╓╝┤д╦д╜д├д╞╜╨╕╜д╣дыбеележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╬╞■дь┬╪дядъдмдядлдъдфд╣дддшджд╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дмепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄд┴дчджд╔╔╜д╖д╞дддыд╬д╧╩╪╡╣╛х╚п╕└╔Ї╩мд╬├ц▒√╔Ї╩мд╦д╩д├д╞дддыбе
 ╜─╝┤д╧╚п╕└├цд╬1╩╕д╬┐Їд╬джд┴бдд╔д╬е░еыб╝е╫д╦▓┐╩╕╞■д├д╞дддыдлд╚дддж╩╕д╬┐ЇдЄ╔╜д╖д╞дддыбе
 
 д│д│д╟jsonе╟б╝е┐дЄ╞■╬╧д╖д┐╕хд╬епещедеиеєе╚д╬╚п╕└д╬│╞1╩╕д╬╜щ┤№╩м╬р╛ї┬╓д╬╩м╬р╩¤╦бд╦д─ддд╞└т╠└д╣дыбе
@@ -81,7 +81,7 @@ jsonе╒ебедеы╞тд╬╦▄╩╕д╬╖┴╝░д╦д─ддд╞└т╠└д╣дыбе┴┤│╤╔╜╝ид╬е│еэеєб╩бзб╦д╟╧├╝╘д╬╕Є┬хдЄ
 
 
 
-\subsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
+\subsubsection{ележеєе╗ещб╝д╬╝┴╠фдЄ╔╜╕╜д╣ды╜─╦└}
 
 Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╦дкддд╞бдепещедеиеєе╚д╧╩╕д┤д╚д╦бдележеєе╗ещб╝д╧╚п╕└д┤д╚д╦╔┴▓шдЄ╣╘ддд┐ддбддлд─┴к┬Є╗ш╔╜╝ид╬д┐дсд╦е░еще╒дЄ╛╩е╣е┌б╝е╣д╖д┐ддд╚дддж┤╤┼└длдщбдележеєе╗ещб╝д╬╚п╕└дЄ▓г╝┤дшдъ▓╝д╦└▐дь└■е░еще╒д╚д╖д╞╔┴▓шд╣дыд╬д╟д╧д╩дпбдепещедеиеєе╚д╬╚п╕└д╬е░еыб╝е╫╩м╔█дЄ╝ид╣└╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д═д╞╜─╦└д╚д╖д╞╔╜╝ид╣дыдшджд╦д╖д┐бед│джд╣дыд│д╚д╦дшд├д╞бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╔┴▓шд╡дьдыд╬д╟бдепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└д╬┤╪╧в└ндмдядлдъдфд╣дпд╩д├д┐бе
 
@@ -112,7 +112,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\section{╕╢╩╕╔╜╝и╡б╟╜}
+\subsubsection{╕╢╩╕╔╜╝и╡б╟╜}
 
 %╦▄└сд╟д╧бд═╫╖ядЄ╦■д┐д╣д┐дсд╬╗ы│╨┼к╔╜╕╜(Visual Representation, Visual Design)бдецб╝е╢б╝едеєе┐ещепе╖ечеєд╩д╔дЄ╜┼┼└┼кд╦└т╠└д╣дыбе
 
@@ -125,7 +125,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %д▐д┐ележеєе╗ещб╝дфепещедеиеєе╚д╬╚п╕└д╦┤╪д╣дые░еыб╝е╫╩м╬рдЄ╝ъ╞░─√└╡д╣дыеще╕еке▄е┐еєд╬еиеъевд╚д▐д╚дсд╞бде░еще╒дшдъ▓╝┬жд╦╩╕╛╧╔╜╝ид╡дьдыдшджд╦еьедевеже╚╩╤╣╣дЄ╣╘д├д┐бе
 
 
-\section{еще╕еке▄е┐еє}
+\subsubsection{еще╕еке▄е┐еє}
 
 %\item 
 %едеєе┐ещепе╞еге╓└ндмд╩ддбд
@@ -154,5 +154,5 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\item 
-%е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е─б╝еыд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
+%е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е╖е╣е╞ерд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
 %\end{itemize}
