--- a/main.tex
+++ b/main.tex
@@ -26,11 +26,11 @@
 \input{chapter2.tex}
 \chapter{ヨーガセラピーについて}
 \input{chapter3.tex}
-\chapter{ツール要件の抽出}
+\chapter{システム要件の抽出}
 \input{chapter4.tex}
-\chapter{ツール概要}
+\chapter{システム概要}
 \input{chapter5.tex}
-\chapter{ツール評価}
+\chapter{システム評価}
 \input{chapter6.tex}
 \chapter{考察}
 \input{chapter7.tex}
