--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,9 +1,9 @@
-本章では，ツール開発にあたり必要となるヨーガセラピーの基礎事項について説明する．心理療法では，単一ですべてに
-通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案ツールの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．
+本章では，システム開発にあたり必要となるヨーガセラピーの基礎事項について説明する．心理療法では，単一ですべてに
+通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案システムの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．
 
 アドラー心理学は認知行動
 療法の先駆け的存在とされている．行っていることは認知の修正で，同じようなアプローチがとられている．
-アドラー心理学はオーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，すなわち「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
+アドラー心理学はオーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，つまり「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
 
 %一方，アドラーが初めて示唆したのは，個人の心理は現時点における意識的諸力にも影響されるが，社会的領域や環境の影響も同様に見逃せないということであった．
 
@@ -28,7 +28,7 @@
 
 
 現在，世界保健機関（WHO）憲章前文において「健康とは，病気でないとか，弱っていないということではなく，肉体的にも，精神的にも，そして社会的にも，すべてが
-満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．すなわち，交友のタスク，仕事のタスク，愛のタスクであると唱えた\cite{ad2}．以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，
+満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．つまり，交友のタスク，仕事のタスク，愛のタスクであると唱えた\cite{ad2}．以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，
 \begin{itemize}
 \item 仕事のタスク：永続しない人間関係
 \item 交友のタスク：永続するが，運命をともにしない人間関係
@@ -53,7 +53,7 @@
 %理論的な特徴として，
 %\begin{itemize}
 % \item 人間を分割できない全体として把握し，理性と感情・意識と無意識などの対立を認めないこと
-% \item 客観事実よりも，客観事実に対する個人の主観的認知のツールを重視すること
+% \item 客観事実よりも，客観事実に対する個人の主観的認知のシステムを重視すること
 % \item 精神内界よりも個人とその相手役との対人関係を理解しようとすること
 %\end{itemize}
 %などがあげられる．
@@ -68,7 +68,7 @@
 %治療技法としては，
 %\begin{itemize}
 % \item 現実的に達成可能な治療目標の一致をとること
-% \item クライエント，すなわちクライエントの言うことの主として目的について推量をして，それをクライエントに確認をとること
+% \item クライエント，つまりクライエントの言うことの主として目的について推量をして，それをクライエントに確認をとること
 % \item クライエント自身が自分の責任で解決しなければならないタスクと，クライエントには責任がなく介入する権利がないタスクとを区別すること
 % \item 目標達成のためのさまざまなアイディアを提供すること
 %\end{itemize}
@@ -81,7 +81,7 @@
 
 
 
-%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，ビギナーのカウンセラーは，上記のような「対人関係上の問題」すなわち「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある．
+%臨床心理士資格取得者数は年を経るごとに増加傾向にあるが，ビギナーのカウンセラーは，上記のような「対人関係上の問題」つまり「愛のタスク」・「仕事のタスク」・「交友のタスク」を，質問に対する回答としてクライエントから引き出すのに苦戦しているという問題がある．
 
 %そこで，ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている．
 
@@ -89,7 +89,7 @@
 
 
 
-%%カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，ないし短い言葉だけで答えられるような質問は「閉じられた質問」ないし「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
+%%カウンセラーの質問内容については，大きく2種類に分けられている．YesまたはNoで答える質問，または短い言葉だけで答えられるような質問は「閉じられた質問」または「閉ざされた質問」と呼ばれている．これに対し，クライエントが5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」で答えるような質問は「開かれた質問」と呼ばれている．クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．しかしビギナーのカウンセラーは「閉じられた質問」の割合が多く，クライエントが何に問題意識を感じているかをカウンセリングでうまく引き出せないケースが比較的多いとされている．
 
 %クライエントの会話としては，内容がどのタスク領域（仕事，交友，愛，セルフタスク，スピリチュアル）に属するのか，カウンセラーの質問としては，内容がオープン（5W1Hを問うもの）またはクローズ（Yes/Noを問うもの）なのかを分類表示できることが必要である．
 
@@ -98,4 +98,4 @@
 
 %もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上の分類法をもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebツールを開発した．次章では本論文の提案ツールのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案ツールに対する要件の抽出について説明する．
+以上の分類法をもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebシステムを開発した．次章では本論文の提案システムのプロトタイプの開発，およびそのプロトタイプに対して専門家つまりカウンセラーからいただいたレビューをもとにした，提案システムに対する要件の抽出について説明する．
