--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,13 +1,13 @@
-本章ではユーザーによる，前章で述べた提案ツールに対するの評価について述べる．
+本章ではユーザーによる，前章で述べた提案システムに対するの評価について述べる．
 
-%本ツール自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントをいただいている．
+%本システム自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントをいただいている．
 
-%またプロトタイプから前章の提案ツールへの変更についても概ね好評価をいただいている．
-
-
+%またプロトタイプから前章の提案システムへの変更についても概ね好評価をいただいている．
 
 
-まず本提案ツールの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．これに関しては，
+
+
+まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存または出力する機能が求められている．これに関しては，
 
 長い文章を入力した際に，その日
 だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントをいただいている．
@@ -23,7 +23,7 @@
 
 
 
-また，本提案ツール全体の配色面に関してさらなる視認性の向上が求められている．具体的には？？という点である「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
+また，本提案システム全体の配色面に関してさらなる視認性の向上が求められている．具体的には？？という点である「文字の色ですが，黄色と灰色は，バックの白とかぶって見えにくくなっ
 ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
 特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
 がつきにくくなりました．」などのコメントをいただいている．
