--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,4 +1,4 @@
-╦▄╛╧д╟д╧бд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе╦▄─є░╞е╖е╣е╞ерд╬│╡═╫д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе
+╦▄╛╧д╟д╧бд─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬е│есеєе╚дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе╦▄─є░╞е╖е╣е╞ерд╬│╡═╫д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе
 
 
 
@@ -156,7 +156,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %д┐д╚дид╨бдб╓джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бед╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дмдщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб╫д╚дддждшджд╩╩╕╛╧д╦д─ддд╞д╧бд║╟╜щд╬╩╕д╧░жд╬е┐е╣епбд┬шг▓╩╕д╧╗┼╗Ўд╬е┐е╣епбд┬шг│╩╕д╧░жд╬е┐е╣епд╚д╚дщдидщдьдыбе
 
 
-%д╜д╬┬╛бд╗╚═╤д╖д┐║▌д╦╔╘╩╪д└д╚┤╢д╕д┐д│д╚бддтд╖╝┬═╤┼кд╩дтд╬д╦д╣дыд╦д╧д╔дждддж╡б╟╜дмд─ддд╞дддьд╨дддддл┼∙бд░╒╕лдЄддд┐д└ддд┐бе
+%д╜д╬┬╛бд╗╚═╤д╖д┐║▌д╦╔╘╩╪д└д╚┤╢д╕д┐д│д╚бддтд╖╝┬═╤┼кд╩дтд╬д╦д╣дыд╦д╧д╔дждддж╡б╟╜дмд─ддд╞дддьд╨дддддл┼∙бд░╒╕лдЄ╞└д┐бе
 
 %╚п╧├╬╠д╬└▐дь└■е░еще╒д╬┐з╩мд▒д╦д─ддд╞д╧бдд╜д╬┐═д╬┤╪┐┤дм╕■ддд╞ддды╧├┬ъд╦дшд├д╞╩мд▒дщдьдыд╬д╟бд╩м╬р╩¤╦бд╬╣й╔╫дм╔м═╫д└д╚╣═дидщдьдыбе
 %д▐д┐╝┬║▌д╦д╧бд╧├д╖д╞ддды├цд╟┤╪┐┤дмд╔дєд╔дє╚Їдєд╟дддп┐═дм┬┐ддд┐дсбдд╔джд╖д╞дддпдл
@@ -217,7 +217,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %\subsection{╖ы▓╠}
 
-%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄддд┐д└ддд┐бе
+%─є░╞е╖е╣е╞ер3дЄележеєе╗ещб╝1╠╛д╦╗╚д├д╞ддд┐д└днбд░╩▓╝д╬е│есеєе╚дЄ╞└д┐бе
 %\begin{itemize}
 % \item б╓╝┴╠ф╖┴╝░дм▓Є╝сбд╠╡┬╠╧├ д╬г▓╝я╬рд╖длд╩ддд┐дсбд┼м└┌д╩╩м╬рдмд╟днд▐д╗дєд╟д╖д┐бе
  
@@ -242,14 +242,14 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 %\subsection{┴┤д╞д╬┴к┬Є╗шдЄ╜ч╚╓д╦╔╜╝и}
 %┴к┬Є╗шдЄд╣д┘д╞╔╜╝ид╖д╞д█д╖дд
-%епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбдд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+%епещедеиеєе╚д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєд╚ележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣дыеще╕еке▄е┐еєдЄдяд▒д╞╔╜╝ид╖д╞ддд┐дмбдд│дьдЄ╝┬║▌д╬▓ё╧├╜чд╦─╛д╖д╞╔╜╝ид╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
 
 
 %\subsection{е╒ейеєе╚е╡еде║д╬╕■╛х}
-%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
+%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚дддже│есеєе╚дЄ╞└д┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
 
 %\subsection{┐з║╠д╬▓■┴▒}
-%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
+%е╒ейеєе╚е╡еде║║╟╛од╬╔Ї╩мдм┬┐дпдк╟пдЄдсд╖д┐╩¤д╦д╧╞╔дсд╩ддд╚дддже│есеєе╚дЄ╞└д┐1╩╕1╩╕дЄ└▐дъд┐д┐дрд│д╚д╟е╒ейеєе╚е╡еде║╕■╛хд╡д╗ды
 
 %\subsection{╟█├╓}
 
@@ -264,7 +264,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-4.1└сд╟└т╠└д╖д┐е╫еэе╚е┐еде╫дЄбд2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞12╠╛д╬└ь╠ч▓╚д╦╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
+4.1└сд╟└т╠└д╖д┐е╫еэе╚е┐еде╫дЄбд2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞12╠╛д╬└ь╠ч▓╚д╦╕лд╞ддд┐д└днбде│есеєе╚дЄ╞└д┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые╖е╣е╞ер═╫╖ядЄ├ъ╜╨д╖д┐бе
 \begin{itemize}
 
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
@@ -273,11 +273,11 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\item ╕╜╛їд╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
+\item ╕╜╛їд╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
 
 
 %\item %еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
-%д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
+%д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚дддже│есеєе╚дЄ╞└д┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
 %едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
 %д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
 %╛ь╜ъд╟╩м╬рд╖д╞дддпд╚бд╞├д╦ележеєе╗ещб╝д╬╚п╕└дм▓┐д╦╕■д▒д╞длдмдядлдъд╦дпдпбд
@@ -288,7 +288,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\item %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣еье╙ехб╝дЄддд┐д└ддд┐бе
+\item %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣е│есеєе╚дЄ╞└д┐бе
 %б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
 %░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
 %д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
@@ -305,18 +305,18 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 ├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
 \item %ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
-д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
-д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚дддже│есеєе╚дЄ╞└д┐бе
+д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
 
 
 \item 
 ╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двды%д╚╣═дидщдьды
 бе
-%╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+%╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚дддже│есеєе╚дЄ╞└д┐бе
 
 
 %\item 
-%╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
+%╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄ╞└д┐бе
 %б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
 %д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
 %╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е╖е╣е╞ерд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
@@ -324,7 +324,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \item 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
 %║╟╕хд╦бд
-%╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
+%╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄ╞└д┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
 %╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
 %╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
 %б╫д╖д┐дмд├д╞бде╒ейеєе╚е╡еде║дЄ┬чдндпд╣ды╔м═╫дмдвдыбе
