--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,4 +1,4 @@
-┴░╛╧д╟д╧─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│л╚пдЄ╣╘д├д┐бед│д╬е╖е╣е╞ерд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
+┴░╛╧д╟д╧─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬е│есеєе╚дЄдтд╚д╦д╖д┐бд─є░╞е╖е╣е╞ер═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╖д┐бед╜дьдЄ╝їд▒бд├ъ╜╨д╖д┐═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│л╚пдЄ╣╘д├д┐бед│д╬е╖е╣е╞ерд╦╠╧╡╝е╟б╝е┐дЄ╞■╬╧д╖д┐║▌д╬╔┴▓ш╖ы▓╠д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:ver160203}д╦╝ид╣бе╦▄╛╧д╟д╧д╜д╬═╫╖ядЄд▀д┐д╖д┐─є░╞е╖е╣е╞ерд╬│╡═╫д╦д─ддд╞└т╠└д╣дыбе
 
  \begin{figure}
 %\begin{landscape}
@@ -139,7 +139,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣дЄ╣╘д├д┐бе
 
 %\item 
-%ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐д╬д╟бд─╔▓├дЄ╣╘д├д┐бед│д│д╟бд└╤д▀╜┼д═└▐дь└■е░еще╒д╬╜щ┤№╔┴▓шд╬║▌д╬╩м╬р╣╘─°д╦д─ддд╞└т╠└д╣дыбед│д╬╣╘─°д╦д─ддд╞┤╩├▒д╦└т╠└д╖д┐┐▐дЄбд┐▐5.1д╦╝ид╣бе%д▐д║б╓ддд─б╫б╓д╔д│б╫б╓▓┐б╫д╩д╔д╬дддядцды5W1HдЄ╝ид╣╡┐╠ф╗ьдЄдтд─╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе╝бд╦╗─дъд╬╚п╕└д╬джд┴бд├▒╕ь┐Їдмг╡╕─░╩▓╝д╬дтд╬дЄб╓┴ъ─╚б╫д╦╩м╬рд╣дыбед╡дщд╦╗─дъд╬╚п╕└д╬джд┴╜к╜ї╗ьб╓длб╫дЄ┤▐др╚п╕└дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе║гд▐д╟д╬г│д─д╦╩м╬рд╡дьд╩длд├д┐дтд╬д╧б╓▓Є╝сб╫длб╓└д┤╓╧├б╫д╦╩м╬рд╡дьдыдяд▒д└дмбд╜к╜ї╗ьд╬б╓д═б╫дЄ┤▐дрдтд╬дЄб╓▓Є╝сб╫бд┤▐д▐д╩дддтд╬дЄб╓└д┤╓╧├б╫д╚д╖д┐бе
+%ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚дддже│есеєе╚дЄ╞└д┐д╬д╟бд─╔▓├дЄ╣╘д├д┐бед│д│д╟бд└╤д▀╜┼д═└▐дь└■е░еще╒д╬╜щ┤№╔┴▓шд╬║▌д╬╩м╬р╣╘─°д╦д─ддд╞└т╠└д╣дыбед│д╬╣╘─°д╦д─ддд╞┤╩├▒д╦└т╠└д╖д┐┐▐дЄбд┐▐5.1д╦╝ид╣бе%д▐д║б╓ддд─б╫б╓д╔д│б╫б╓▓┐б╫д╩д╔д╬дддядцды5W1HдЄ╝ид╣╡┐╠ф╗ьдЄдтд─╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе╝бд╦╗─дъд╬╚п╕└д╬джд┴бд├▒╕ь┐Їдмг╡╕─░╩▓╝д╬дтд╬дЄб╓┴ъ─╚б╫д╦╩м╬рд╣дыбед╡дщд╦╗─дъд╬╚п╕└д╬джд┴╜к╜ї╗ьб╓длб╫дЄ┤▐др╚п╕└дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╦╩м╬рд╣дыбе║гд▐д╟д╬г│д─д╦╩м╬рд╡дьд╩длд├д┐дтд╬д╧б╓▓Є╝сб╫длб╓└д┤╓╧├б╫д╦╩м╬рд╡дьдыдяд▒д└дмбд╜к╜ї╗ьд╬б╓д═б╫дЄ┤▐дрдтд╬дЄб╓▓Є╝сб╫бд┤▐д▐д╩дддтд╬дЄб╓└д┤╓╧├б╫д╚д╖д┐бе
 
 %\item 
 %╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐бе
@@ -154,5 +154,5 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\item 
-%е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е╖е╣е╞ерд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
+%е╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚дддже│есеєе╚дЄдтд╚д╦бд╕╡д╬е╞ене╣е╚е╟б╝е┐─╠дъд╬╜ч╚╓д╦╩┬д╓дшджд╦╩╤╣╣д╖д┐бед▐д┐бд┴┤д╞д╬╩╕д╦дкддд╞двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдм╔╜╝ид╡дьд╞дддыд╚╚є╛яд╦╕лд┼дщддд╬д╟бд╩г┐Їд╬┴к┬Є╗шд╬▓─╟╜└ндмдвдыд╚е╖е╣е╞ерд╟╚╜├╟д╖д┐дтд╬д╦д─ддд╞д╬д▀двдщдлд╕дс┴к┬Є╗шд╬еще╕еке▄е┐еєдЄ╔╜╝ид╖бдд╜дь░╩│░д╦┤╪д╖д╞д╧еще╕еке▄е┐еєеиеъев╞тд╬д╜д╬│║┼Ў▓╒╜ъд╬╩╕╛╧дЄепеъе├епд╣дыд│д╚д╟└▐дъд┐д┐д▐дьд╞ддд┐┴к┬Є╗шеще╕еке▄е┐еєдмд╣д░▓╝д╦╔╜╝ид╡дьдыдшджд╦д╖д┐бе
 %\end{itemize}
