--- a/chapter6.tex
+++ b/chapter6.tex
@@ -18,7 +18,7 @@
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状についての記述は，愛・交友・
 仕事のどれにも当てはまらないことが多いため，第４のタスクとされるself task自
 己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれないというレビューをいただいた．症状に囚われているクライエントは，自己の課題が大半
+ただく方がいいかもしれないというコメントを得た．症状に囚われているクライエントは，自己の課題が大半
 になるといえる．
 
 
