--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,6 +1,6 @@
 本章では，前章で述べたシステム評価を元にした考察について述べる．第1章で述べた通り，ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとってすぐにわかるようになることが，本提案システムによって実現されたと考える．
 
-%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
+%2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本システムのプロトタイプを見ていただき，アイデアに関して概ね良い評価を得た．本システムの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
 
 ただし前章で述べたとおり保存機能が求められているなど，ビギナーのカウンセラー指導に対して実用的なものになるにはまだまだステップを必要とすると考える．
@@ -8,12 +8,12 @@
 まず本提案システムの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存，または出力する機能が求められている．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考えられる．
 
 
-次に，本提案システムに対するレビューとして，ラジオボタンの使い勝手に関するレビューが多かった．
+次に，本提案システムに対するコメントとして，ラジオボタンの使い勝手に関するコメントが多かった．
 これは文のグループの分類を手動で変更することで折り畳み機能やラジオボタンの表示の順番など，説明不足な点が多かったからであると考える．
 
 
 %また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというレビューを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというコメントを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
 ページ右下側に表示されるカウンセラーの実際の発言内容を囲う墨つきかっこも色だけでは判別がつかないというコメントをいただいている．薄い色や青色が見えにくいという問題に対しては、ユーザーであるベテランのカウンセラーがお年を召しておりユーザーご自身の老眼が進行しているという理由や，ユーザーが本提案システムを使用する際にブルーライトカットのスクリーンを用いているという理由があげられる．カウンセラーからクライエントへの質問を示す縦棒，および右下でその質問が表示されている部分については，色分けだけでなく，たとえば「開かれた質問」には「開」，閉じられた質問には「閉」などのように文字や何かアイコンを表示する必要があると考えられる．
